# ms-requests-session

./: .flake8  LICENSE  README.md  pyproject.toml
ms_requests_session/: api.py
