[tool.poetry]
name = "ms-requests-session"
version = "0.0.0"
description = "Provides a requests session logged in to your Microsoft account"
authors = ["Zeke Marffy <zmarffy@yahoo.com>"]
packages = [{ include = "ms_requests_session" }]
readme = "README.md"
repository = "https://github.com/zmarffy/ms_requests_session"
homepage = "https://github.com/zmarffy/ms_requests_session"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
poetry = "^1.8.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
poethepoet = "^0.19.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | _build_files
)/
'''

[tool.isort]
profile = "black"
skip = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "_build_files",
]

[tool.poe.tasks]
clean = "rm -rf .pytest_cache dist ./**/__pycache__ test-report.xml"
_black = "black --diff . --check"
_isort = "isort . -c"
check-format = ["_black", "_isort"]
lint = "flake8"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
tagged-metadata = true
dirty = true
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}+{{ distance }}.{{ commit }}{% endif %}"
